--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/config": "^3.3.5",
+    "@types/mongoose": "^5.11.96",
     "config": "^4.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
