--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@types/config": "^3.3.5",
     "@types/mongoose": "^5.11.96",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "config": "^4.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
